lib_LTLIBRARIES = libdaework.la

libdaework_cinclude_HEADERS = \
	src/daework/include.h \
        src/daework/kernel/Action.h \
        src/daework/kernel/Daemonizer.h \
        src/daework/kernel/Dispatcher.h \
        src/daework/kernel/Server.h \
        src/daework/kernel/Thread.h \
        src/daework/modules/IniParser.h \
        src/daework/modules/LogManager.h \
        src/daework/utils/Comm.h \
        src/daework/utils/CommHttp.h \
        src/daework/utils/CommTelnet.h \
        src/daework/utils/MeterAction.h \
        src/daework/utils/Meter.h \
        src/daework/utils/Util.h

libdaework_SOURCES = \
	src/daework/kernel/Action.cpp \
        src/daework/kernel/Daemonizer.cpp \
        src/daework/kernel/Dispatcher.cpp \
        src/daework/kernel/Server.cpp \
        src/daework/kernel/Thread.cpp \
        src/daework/modules/IniParser.cpp \
        src/daework/modules/LogManager.cpp \
        src/daework/utils/Comm.cpp \
        src/daework/utils/CommHttp.cpp \
        src/daework/utils/CommTelnet.cpp \
        src/daework/utils/MeterAction.cpp \
        src/daework/utils/Meter.cpp \
        src/daework/utils/Util.cpp
 

libdaework_LDFLAGS = -version-info 0:1:0

