#noinst_PROGRAMS = dwcg
bin_PROGRAMS = dwcg

dwcg_SOURCES = \
    dwcg.cpp \
    Generator.cpp \
    Generator.h \
    Input.cpp \
    Input.h \
    Template.cpp \
    Template.h 

dwcgdir = $(datadir)/dw_templates

dwcg_DATA = \
    dw_templates/action_cpp.tmp \
    dw_templates/action_h.tmp \
    dw_templates/dispatcher_cpp.tmp \
    dw_templates/dispatcher_h.tmp \
    dw_templates/ini.tmp \
    dw_templates/main.tmp \
    dw_templates/makefile.tmp \
    dw_templates/server_cpp.tmp \
    dw_templates/server_h.tmp \
    dw_templates/thread_cpp.tmp \
    dw_templates/thread_h.tmp \
    dw_templates/verb_cpp.tmp \
    dw_templates/verb_h.tmp
