lib_LIBRARIES = libdaework.a

libdaework_a_SOURCES = \
        daework-include.h \
        daework-kernel.h \
        daework-support.h \
        kernel/Action.cpp \
        kernel/Daemonizer.cpp \
        kernel/Dispatcher.cpp \
        kernel/Server.cpp \
        kernel/Thread.cpp \
        support/IniParser.cpp \
        support/LogManager.cpp \
        support/Comm.cpp \
        support/CommHttp.cpp \
        support/CommTelnet.cpp \
        support/MeterAction.cpp \
        support/Meter.cpp \
        support/Util.cpp 

libdaework_a_CXXFLAGS = -O3
#libdaework_a_LDFLAGS = -version-info 0:1:0
